@@ -235,7 +235,7 @@ sub index {
             $node->{'depends'} = Thruk::Utils::list($c->req->parameters->{'bp_'.$id.'_selected_nodes'} || []);
 
             # save object creating attributes
-            for my $key (qw/host service template notification_period event_handler/) {
+            for my $key (qw/host service template notification_period event_handler max_check_attempts/) {
                 $node->{$key} = $c->req->parameters->{'bp_'.$key} || '';
             }
             # node array options
